test/end-to-end/compile-errors/import-non-utf8-as-string.crow
import
	./not-utf8.txt as s string

main void()
	info log s
